# contract-testing-poc

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
consumer/: Dockerfile  pyproject.toml
consumer/scripts/: publish_pact.py
consumer/src/: client.py
consumer/tests/: test_consumer_contract.py
consumer2/: Dockerfile  pyproject.toml
consumer2/scripts/: publish_pact.py
consumer2/src/: client.py
consumer2/tests/: test_consumer_contract.py
provider/: Dockerfile  pyproject.toml
provider/src/: main.py
provider/tests/: test_provider_verification.py
